; ModuleID = '/home/carl/AnghaBench/h2o/t/00unit/lib/handler/extr_........libhandlercompress.c_h2o_compress_register.c'
source_filename = "/home/carl/AnghaBench/h2o/t/00unit/lib/handler/extr_........libhandlercompress.c_h2o_compress_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_compress_filter_t = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@on_setup_ostream = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @h2o_compress_register(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.st_compress_filter_t*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i64 @h2o_create_filter(i32* %6, i32 8)
  %8 = inttoptr i64 %7 to i8*
  %9 = bitcast i8* %8 to %struct.st_compress_filter_t*
  store %struct.st_compress_filter_t* %9, %struct.st_compress_filter_t** %5, align 8
  %10 = load i32, i32* @on_setup_ostream, align 4
  %11 = load %struct.st_compress_filter_t*, %struct.st_compress_filter_t** %5, align 8
  %12 = getelementptr inbounds %struct.st_compress_filter_t, %struct.st_compress_filter_t* %11, i32 0, i32 1
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  store i32 %10, i32* %13, align 4
  %14 = load i32*, i32** %4, align 8
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.st_compress_filter_t*, %struct.st_compress_filter_t** %5, align 8
  %17 = getelementptr inbounds %struct.st_compress_filter_t, %struct.st_compress_filter_t* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 4
  ret void
}

declare dso_local i64 @h2o_create_filter(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
